--- a/Spotify-Clone/Views/PlaySongViewController.xib
+++ b/Spotify-Clone/Views/PlaySongViewController.xib
@@ -10,6 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PlaySongViewController" customModule="Spotify_Clone" customModuleProvider="target">
             <connections>
+                <outlet property="endTimeLabel" destination="Ran-Ep-ur0" id="Jl3-hV-eZO"/>
                 <outlet property="favButton" destination="6Si-dU-v2Z" id="BND-U4-aJx"/>
                 <outlet property="loopButton" destination="kRb-i2-QU0" id="LEz-BX-oo8"/>
                 <outlet property="nextButton" destination="ike-yh-NoI" id="chr-Nh-3nE"/>
@@ -19,6 +20,7 @@
                 <outlet property="shuffleButton" destination="xjp-ih-uf9" id="q66-Xb-nkf"/>
                 <outlet property="songImageUrl" destination="H8S-c3-oVx" id="AqQ-je-koJ"/>
                 <outlet property="songNameLabel" destination="RAP-bd-KHt" id="4hI-dK-15B"/>
+                <outlet property="starTimeLabel" destination="mVh-Tr-N2p" id="IDe-8x-lv7"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -40,16 +42,16 @@
                                     </constraints>
                                 </imageView>
                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="A7B-Ks-dUg">
-                                    <rect key="frame" x="0.0" y="366" width="398" height="91.5"/>
+                                    <rect key="frame" x="0.0" y="366" width="398" height="84.5"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="song name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RAP-bd-KHt">
-                                            <rect key="frame" x="0.0" y="0.0" width="84" height="91.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="84" height="84.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Si-dU-v2Z" userLabel="favButton">
-                                            <rect key="frame" x="352.5" y="0.0" width="45.5" height="91.5"/>
+                                            <rect key="frame" x="352.5" y="0.0" width="45.5" height="84.5"/>
                                             <state key="normal" title="Button"/>
                                             <buttonConfiguration key="configuration" style="plain" image="heart" catalog="system"/>
                                             <connections>
@@ -58,17 +60,39 @@
                                         </button>
                                     </subviews>
                                 </stackView>
-                                <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="10N-eQ-f7w">
-                                    <rect key="frame" x="0.0" y="473.5" width="398" height="8"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="8" id="XGp-ZN-Psm"/>
-                                    </constraints>
-                                </progressView>
+                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="aDZ-6a-bJA">
+                                    <rect key="frame" x="0.0" y="466.5" width="398" height="77"/>
+                                    <subviews>
+                                        <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="10N-eQ-f7w">
+                                            <rect key="frame" x="0.0" y="0.0" width="398" height="8"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="8" id="XGp-ZN-Psm"/>
+                                            </constraints>
+                                        </progressView>
+                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="enV-3T-ita">
+                                            <rect key="frame" x="0.0" y="8" width="398" height="69"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mVh-Tr-N2p" userLabel="start time">
+                                                    <rect key="frame" x="0.0" y="0.0" width="24" height="69"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ran-Ep-ur0" userLabel="end time">
+                                                    <rect key="frame" x="374" y="0.0" width="24" height="69"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
+                                    </subviews>
+                                </stackView>
                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="rcj-aU-QJH">
-                                    <rect key="frame" x="0.0" y="497.5" width="398" height="346.5"/>
+                                    <rect key="frame" x="0.0" y="559.5" width="398" height="284.5"/>
                                     <subviews>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xjp-ih-uf9" userLabel="shuffle">
-                                            <rect key="frame" x="0.0" y="0.0" width="48.5" height="346.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="48.5" height="284.5"/>
                                             <state key="normal" title="Button"/>
                                             <buttonConfiguration key="configuration" style="plain" image="shuffle" catalog="system"/>
                                             <connections>
@@ -76,7 +100,7 @@
                                             </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zwq-Wj-peu" userLabel="previous">
-                                            <rect key="frame" x="91" y="0.0" width="45.5" height="346.5"/>
+                                            <rect key="frame" x="91" y="0.0" width="45.5" height="284.5"/>
                                             <state key="normal" title="Button"/>
                                             <buttonConfiguration key="configuration" style="plain" image="backward.end.fill" catalog="system"/>
                                             <connections>
@@ -84,7 +108,7 @@
                                             </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vPF-CP-jWy" userLabel="play">
-                                            <rect key="frame" x="179" y="0.0" width="40" height="346.5"/>
+                                            <rect key="frame" x="179" y="0.0" width="40" height="284.5"/>
                                             <state key="normal" title="Button"/>
                                             <buttonConfiguration key="configuration" style="plain" image="play.fill" catalog="system"/>
                                             <connections>
@@ -92,7 +116,7 @@
                                             </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ike-yh-NoI" userLabel="next">
-                                            <rect key="frame" x="261" y="0.0" width="45.5" height="346.5"/>
+                                            <rect key="frame" x="261" y="0.0" width="45.5" height="284.5"/>
                                             <state key="normal" title="Button"/>
                                             <buttonConfiguration key="configuration" style="plain" image="forward.end.fill" catalog="system"/>
                                             <connections>
@@ -100,7 +124,7 @@
                                             </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kRb-i2-QU0" userLabel="loop">
-                                            <rect key="frame" x="349" y="0.0" width="49" height="346.5"/>
+                                            <rect key="frame" x="349" y="0.0" width="49" height="284.5"/>
                                             <state key="normal" title="Button"/>
                                             <buttonConfiguration key="configuration" style="plain" image="arrow.triangle.2.circlepath" catalog="system"/>
                                             <connections>
