--- a/Spotify-Clone/Views/PlaylistViewController.xib
+++ b/Spotify-Clone/Views/PlaylistViewController.xib
@@ -15,7 +15,6 @@
                 <outlet property="detailsLabel" destination="Dge-jf-DII" id="j8O-A7-TXK"/>
                 <outlet property="favButton" destination="r3J-xe-Wcj" id="Ilo-AC-Frq"/>
                 <outlet property="likesLabel" destination="JfF-ra-4BF" id="xDR-RQ-mp9"/>
-                <outlet property="menuButton" destination="vsX-B0-Vco" id="daQ-b8-5Ds"/>
                 <outlet property="playlistCV" destination="3rK-rF-h2Y" id="kxa-Wz-ZXs"/>
                 <outlet property="spotifyLabel" destination="teh-D5-iSc" id="TOG-DI-c2Z"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -71,21 +70,14 @@
                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="NRZ-Ec-MSH" userLabel="Play SV">
                                     <rect key="frame" x="0.0" y="263" width="382" height="60.5"/>
                                     <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="m6L-4J-beK">
-                                            <rect key="frame" x="0.0" y="15" width="89.5" height="31"/>
-                                            <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r3J-xe-Wcj" userLabel="favorite">
-                                                    <rect key="frame" x="0.0" y="0.0" width="45.5" height="31"/>
-                                                    <state key="normal" title="Button"/>
-                                                    <buttonConfiguration key="configuration" style="plain" image="heart" catalog="system"/>
-                                                </button>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vsX-B0-Vco" userLabel="menu">
-                                                    <rect key="frame" x="53.5" y="0.0" width="36" height="31"/>
-                                                    <state key="normal" title="Button"/>
-                                                    <buttonConfiguration key="configuration" style="plain" image="info" catalog="system"/>
-                                                </button>
-                                            </subviews>
-                                        </stackView>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r3J-xe-Wcj" userLabel="favorite">
+                                            <rect key="frame" x="0.0" y="15" width="45.5" height="31"/>
+                                            <state key="normal" title="Button"/>
+                                            <buttonConfiguration key="configuration" style="plain" image="heart" catalog="system"/>
+                                            <connections>
+                                                <action selector="favButtonPressed:" destination="-1" eventType="touchUpInside" id="sZv-eS-x8Y"/>
+                                            </connections>
+                                        </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zTM-f1-s9N">
                                             <rect key="frame" x="298" y="0.0" width="84" height="60.5"/>
                                             <state key="normal" title="Button"/>
@@ -130,7 +122,6 @@
         <image name="Play Button" width="60" height="60"/>
         <image name="Spotify" width="254" height="254"/>
         <image name="heart" catalog="system" width="128" height="109"/>
-        <image name="info" catalog="system" width="93" height="128"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
